maybe fix centering on firefox

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,8 @@ section {
     margin: 0;
     width: 75%;
     align-self: center;
+    margin-left: auto;
+    margin-right: auto;
     justify-self: center;
     text-align: left;
     border-radius: 15px;
